# displayswitcheroo

./: .gitignore  .gitmodules  .k  Makefile  README.md  displayswitcheroo.c  displayswitcheroo.cabal  example.json  install.sh  prepare.sh  r.h  stack.yaml  tests.sh
.github/workflows/: tests.yaml
app/: Main.hs
data/displayswitcheroo/: displayswitcheroo.lua  edid.lua  list.lua
doc/: .gitignore  Makefile  README.in.md  output.list
examples/: switch.lua
lib/: .gitignore  .k  Makefile  cli.c  go.lua  r.c  r.h  x11.c
ref/: .gitignore  links.md  mk.sh
src/: .k  DisplaySwitcheroo.hs  Makefile  cli.c  edid.c  edid.h  r.h  switch.lua  wait.c  wait.h  x11.c  x11.h
src/DisplaySwitcheroo/: Config.hs  Logging.hs
tools/: common.makefile  is-clean  usage  version
