name:                displayswitcheroo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rootmos/displayswitcheroo#readme
license:             GPL-3
license-file:        LICENSE
author:              Gustav Behm
maintainer:          gustav.behm@gmail.com
copyright:           2016 Gustav Behm
category:            Utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DisplaySwitcheroo
                     , DisplaySwitcheroo.Config
                     , DisplaySwitcheroo.Logging
  build-depends:       base >= 4.7 && < 5
                     , X11 >= 1.6.1.2
                     , containers >= 0.5.6.2
                     , mtl >= 2.2.1
                     , aeson >= 0.11.2.0
                     , bytestring >= 0.10.6.0
                     , hslogger >= 1.2.10
                     , transformers >= 0.4.2
                     , safe >= 0.3.9
  ghc-options:         -Wall
  default-language:    Haskell2010

executable displayswitcheroo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , displayswitcheroo
                     , X11 >= 1.6.1.2
                     , mtl >= 2.2.1
                     , directory >= 1.2.2.0
                     , process >= 1.2.3.0
                     , optparse-applicative >= 0.12.1.0
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite displayswitcheroo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , displayswitcheroo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rootmos/displayswitcheroo
